--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-tweet-embed": "^1.3.1",
+    "react-twitter-widgets": "^1.10.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
