--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
-    "react-tweet-embed": "^1.3.1",
-    "react-twitter-widgets": "^1.10.0",
+    "react-scroll": "^1.8.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
